css overlap fix and nav

--- a/Shared/navbar.css
+++ b/Shared/navbar.css
@@ -1,6 +1,32 @@
-#containerNav{
-    height: 100%;
-    width: 100%;
-    background-color: #eee;
-    padding-top: 100px;
+nav{
+  display: flex;
+  height: 80px;
+  width: 100%;
+  background-color: #eee;
+  border-bottom: 6px solid rgba(0,0,0,0.3);
+}
+
+nav img{
+  height: 100px;
+  width: 300px;
+  margin: 6px 130px 0px 15%;
+}
+
+nav a{
+  display: block;
+  height: 70%;
+  margin-top: 15px;
+  background: rgba(0, 116, 217, 0.8);
+  color: white;
+  padding: 0 40px 0;
+  transform: skewX(45deg);
+  transition: transform 300ms ease-in-out;
+}
+nav a p{
+  font-size: 1.7em;
+  margin: 10px 0;
+  transform: skewX(-45deg);
+}
+nav a:hover{
+  transform: skewX(45deg) translateY(4px);
 }
